<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none"
        >
        <item android:title="@string/person">
            <menu>
                <item
                    android:id="@+id/nav_personal"
                    android:icon="@mipmap/ic_center_64dp"
                    android:title="@string/personal"
                    />
                <item
                    android:id="@+id/nav_friends"
                    android:icon="@mipmap/ic_friend_64dp"
                    android:title="@string/myfriends"
                    />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="none">
        <item android:title="@string/system">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@mipmap/ic_about_64dp"
                    android:title="@string/about"
                    />
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@mipmap/ic_feedback_64dp"
                    android:title="@string/feedback"
                    />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@mipmap/ic_exit_64dp"
                    android:title="@string/exit"
                    />
            </menu>
        </item>
    </group>

</menu>