<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@mipmap/ic_head_128dp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
         />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        >
        <!--不同于普通的EditText,这个可以在横屏时仍然显示hint-->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/username"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="280dp"
        android:layout_height="39dp"
        android:layout_marginTop="48dp"
        android:layout_gravity="center"
        android:background="@drawable/arc_shape"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/btn_register"
        android:background="@drawable/arc_shape"
        android:backgroundTint="@color/colorAccent"
        android:layout_width="280dp"
        android:layout_height="39dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:text="@string/register"
        android:textColor="@android:color/white" />


</LinearLayout>