<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dfdfdf"
    tools:context="com.test.campushelper.activity.PublishProjectActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_name"
                    android:textColor="@android:color/black"
                    />
                <EditText
                    android:id="@+id/et_proj_name"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:textSize="12dp"
                    android:gravity="top"
                    android:padding="8dp"
                    android:background="@drawable/editbox_shape"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_goal"
                    android:textColor="@android:color/black"
                    />

                <EditText
                    android:id="@+id/et_proj_goal"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/editbox_shape"
                    android:gravity="top"
                    android:textSize="12dp"
                    android:padding="8dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_need"
                    android:textColor="@android:color/black"
                    />

                <EditText
                    android:id="@+id/et_proj_need"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/editbox_shape"
                    android:gravity="top"
                    android:textSize="12dp"
                    android:padding="8dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_period"
                    android:textColor="@android:color/black"
                    />

                <EditText
                    android:id="@+id/et_proj_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editbox_shape"
                    android:gravity="top"
                    android:textSize="12dp"
                    android:padding="8dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_rep_course"
                    android:textColor="@android:color/black"
                    />

                <EditText
                    android:id="@+id/et_proj_rep_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editbox_shape"
                    android:gravity="top"
                    android:textSize="12dp"
                    android:padding="8dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_rep_credit"
                    android:textColor="@android:color/black"
                    />

                <EditText
                    android:id="@+id/et_proj_rep_credit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editbox_shape"
                    android:gravity="top"
                    android:textSize="12dp"
                    android:padding="8dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_rep_reason"
                    android:textColor="@android:color/black"
                    />

                <EditText
                    android:id="@+id/et_proj_rep_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editbox_shape"
                    android:gravity="top"
                    android:textSize="12dp"
                    android:padding="8dp"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/btn_proj_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publish"
                android:layout_margin="32dp"
                android:textColor="@android:color/white"
                android:background="@drawable/matrix_angle_shape"
                />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
