<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.campushelper.activity.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        >
        <!--不同于普通的EditText,这个可以在横屏时仍然显示hint-->
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:hint="@string/username"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        app:passwordToggleEnabled="true">
        <!--不同于普通的EditText,这个可以在横屏时仍然显示hint-->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="25dp"

        >
        <!--不同于普通的EditText,这个可以在横屏时仍然显示hint-->
        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/pwd_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
             />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"

            android:text="请选择角色" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:entries="@array/roles" />
    </LinearLayout>

    <Button
        android:id="@+id/register"
        android:layout_marginTop="48dp"
        android:layout_gravity="center"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/arc_shape"
        android:layout_width="217dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        />

</LinearLayout>
