<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@android:color/white"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="2dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_tech_head"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="12dp"
                android:src="@drawable/head" />
            <TextView
                android:id="@+id/tv_tech_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/civ_tech_head"
                android:layout_toEndOf="@+id/civ_tech_head"
                android:text="Sencer"
                android:textColor="@android:color/black"
                android:textSize="18dp" />
            <TextView
                android:id="@+id/tv_tech_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/civ_tech_head"
                android:layout_alignStart="@+id/tv_tech_name"
                android:textSize="12dp"
                android:text="3月30日 16:54" />
            <TextView
                android:id="@+id/tv_tech_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/tv_tech_time"
                android:layout_alignBottom="@+id/tv_tech_name"
                android:layout_marginStart="23dp"
                android:layout_toEndOf="@+id/tv_tech_time"
                android:text="计算机与信息安全学院"
                android:textSize="12dp"
                />
            </RelativeLayout>
        <!--项目信息布局-->
        <LinearLayout
            android:id="@+id/ll_project_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_name"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/tv_tech_proj_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_goal"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/tv_tech_proj_goal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introduce"
                    android:layout_marginLeft="8dp"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_need"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/tv_tech_proj_need"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/introduce"
                    android:layout_marginLeft="8dp"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_period"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/tv_tech_proj_period"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2年"
                    android:layout_marginLeft="8dp"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_rep_course"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/tv_tech_proj_replaced_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="毕业设计"
                    android:layout_marginLeft="8dp"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_rep_credit"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/tv_tech_proj_replaced_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="16"
                    android:layout_marginLeft="8dp"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/proj_rep_reason"
                    android:textColor="@android:color/black"
                    />
                <TextView
                    android:id="@+id/tv_tech_proj_replaced_reason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="这是一个完整的开发系统，具有较高的工程和理论要求，内容较难，满足毕业设计的指标要求。"
                    android:layout_marginLeft="8dp"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:lineSpacingExtra="3dp"
                    android:textColor="@android:color/black"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>